# sticky-surgery

./: .gitignore  Cargo.toml  README.md  config.example.yml  log4rs.yml  main.db
src/: discord.rs  errors.rs  main.rs  stickers.rs  stickers_old.rs
src/db/: mod.rs
src/db/entities/: guild_data.rs  guild_pack_rel.rs  mod.rs  prelude.rs  role.rs  sticker.rs  sticker_pack.rs  user_data.rs  user_pack_rel.rs
src/db/migrator/: m20221222_000001_initial.rs  mod.rs
