[package]
name = "sticky-surgery"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.23", features = ["macros", "rt-multi-thread"] }
sea-orm = { version = "0.10.5", features = [
  "sqlx-sqlite",
  "runtime-tokio-rustls",
  "macros",
  "mock",
] }
sea-orm-migration = "0.10.5"
serenity = { version = "0.11.5", default_features = false, features = [
  "builder",
  "cache",
  "collector",
  "client",
  "gateway",
  "http",
  "model",
  "utils",
  "rustls_backend",
] }
log = "0.4.17"
log4rs = "1.2.0"
tracing = "0.1.37"
regex = "1.7.0"
lazy_static = "1.4.0"
url = "2.3.1"
config = "0.13.3"